--- a/build.gradle
+++ b/build.gradle
@@ -55,8 +55,13 @@ java {
 compileJava {
   options.compilerArgs << "-Xlint:cast"
   options.compilerArgs << "-Xlint:deprecation"
+  options.compilerArgs << "-Xlint:divzero"
   options.compilerArgs << "-Xlint:empty"
+  options.compilerArgs << "-Xlint:finally"
   options.compilerArgs << "-Xlint:overrides"
+  // options.compilerArgs << "-Xlint:processing"
+  options.compilerArgs << "-Xlint:try"
+  // options.compilerArgs << "-Xlint:unchecked"
   options.compilerArgs << "-Xlint:varargs"
   options.compilerArgs << "-Werror"
 }
