--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ apply plugin: 'pmd'
 apply plugin: 'idea'
 
 project.group = 'de.tum.in'
-project.version = '21.??-development'
+project.version = '21.0'
 
 project.archivesBaseName = 'owl'
 project.mainClassName = 'owl.command.OwlCommand'
