--- a/build.gradle
+++ b/build.gradle
@@ -97,9 +97,10 @@ dependencies {
     // https://github.com/junit-team/junit5/
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    testRuntimeOnly    'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 
     antlr 'org.antlr:antlr4:4.8-1'
+    // We remove unused runtime dependencies below.
 
     // https://mvnrepository.com/artifact/com.google.errorprone/error_prone_core
     // TODO: Reenable
@@ -108,6 +109,21 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.auto.value/auto-value
     implementation 'com.google.auto.value:auto-value-annotations:1.7.4'
     annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
+}
+
+// Remove jars that are not used during runtime from classpath.
+def unused = [[group: 'org.antlr', module: 'antlr4'],
+              [group: 'org.antlr', module: 'antlr-runtime'],
+              [group: 'org.antlr', module: 'ST4'],
+              [group: 'org.abego.treelayout'],
+              [group: 'org.glassfish'],
+              [group: 'org.immutables', module: 'value'],
+              [group: 'com.google.auto.value', module: 'auto-value-annotations'],
+              [group: 'com.google.guava', module: 'listenablefuture'],
+              [group: 'com.google.j2objc', module: 'j2objc-annotations']]
+unused.each { unusedDependency ->
+    configurations.runtimeClasspath.exclude unusedDependency
+    configurations.testRuntimeClasspath.exclude unusedDependency
 }
 
 test {
