--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: 'true'
       - name: Setup GraalVM
         uses: graalvm/setup-graalvm@v1
         with:
@@ -39,7 +41,6 @@ jobs:
             build/native-executable/reports
             build/native-library/reports
           retention-days: 1
-          if-no-files-found: error
       - name: Upload Distribution
         uses: actions/upload-artifact@v3
         with:
@@ -62,6 +63,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: 'true'
       - name: Build
         run: ./gradlew --no-daemon nativeImageDistZip -Pstatic-native-executable -Pdisable-pandoc
       - name: Quickcheck
@@ -84,6 +87,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          submodules: 'true'
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
