--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -31,3 +31,5 @@ jobs:
           VALIDATE_GOOGLE_JAVA_FORMAT: false
           # Too sensitive.
           VALIDATE_JSCPD: false
+          # No android in here
+          VALIDATE_KOTLIN_ANDROID: false
