--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,15 @@
+[*.sh]
+# like -i=4
+indent_style = space
+indent_size = 4
+
 [*.{kt,kts}]
 insert_final_newline=true
 
 [build.gradle.kts]
 max_line_length=off
 disabled_rules=string-template,no-consecutive-blank-lines,wrapping,indent
+
+# Ignore the entire "third_party" directory.
+[thirdparty/**]
+ignore = true
