--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -31,3 +31,7 @@ jobs:
           VALIDATE_GOOGLE_JAVA_FORMAT: false
           # Too sensitive.
           VALIDATE_JSCPD: false
+          # No android in here
+          VALIDATE_KOTLIN_ANDROID: false
+          # Exclude troublesome files
+          FILTER_REGEX_EXCLUDE: vars[.]sh
