--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -25,9 +25,9 @@ jobs:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: false
-          # We use Google Jave Format.
+          # We use Google Java Format.
           VALIDATE_JAVA: false
-          # Deactive until Java 17 is supported.
+          # Deactivated until Java 17 is supported.
           VALIDATE_GOOGLE_JAVA_FORMAT: false
           # Too sensitive.
           VALIDATE_JSCPD: false
@@ -35,3 +35,7 @@ jobs:
           VALIDATE_KOTLIN_ANDROID: false
           # Exclude troublesome files
           FILTER_REGEX_EXCLUDE: vars[.]sh
+          # We only have C code.
+          VALIDATE_CPP: false
+          # Failure messages not helpful.
+          VALIDATE_CLANG_FORMAT: false
